--- a/README.adoc
+++ b/README.adoc
@@ -15,7 +15,10 @@ toc::[]
 
 Customize your terminal::
 Guide available here https://docs.microsoft.com/en-us/windows/terminal/install?WT.mc_id=-blog-scottha[here].
+https://docs.microsoft.com/en-us/windows/terminal/tutorials/custom-prompt-setup[This] is the official Microsoft guide on how to enable oh-my-posh.
 You should also go through this https://www.hanselman.com/blog/my-ultimate-powershell-prompt-with-oh-my-posh-and-the-windows-terminal[guide] if you want great glyphs.
+You can customise your prompt further by changing the options in `ggurgul-oh-my-posh-profile.json` according to the https://ohmyposh.dev/docs/git[oh-my-posh docs].
+
 
 == PowerShell
 
