--- a/README.adoc
+++ b/README.adoc
@@ -1,4 +1,5 @@
 :toc: macro
+:powershell-docs: link:PowerShell/PowerShell.adoc[PowerShell]
 :oh-my-posh: https://ohmyposh.dev/[Oh My Posh]
 
 = link:README.adoc[Home]
@@ -11,16 +12,9 @@ toc::[]
 
 ---
 
-== Set up
-
-Customize your terminal::
-Guide available here https://docs.microsoft.com/en-us/windows/terminal/install?WT.mc_id=-blog-scottha[here].
-https://docs.microsoft.com/en-us/windows/terminal/tutorials/custom-prompt-setup[This] is the official Microsoft guide on how to enable oh-my-posh.
-You should also go through this https://www.hanselman.com/blog/my-ultimate-powershell-prompt-with-oh-my-posh-and-the-windows-terminal[guide] if you want great glyphs.
-You can customise your prompt further by changing the options in `ggurgul-oh-my-posh-profile.json` according to the https://ohmyposh.dev/docs/git[oh-my-posh docs].
-You may also choose completely different theme from https://ohmyposh.dev/docs/themes[this list].
-
 == PowerShell
+
+See {powershell-docs} for details how to set it up properly.
 
 {oh-my-posh}::
 Customise your shell profile.
